--- a/aula01/style.css
+++ b/aula01/style.css
@@ -3,17 +3,14 @@
   display: grid;
 }
 
-.grid-template-columns {
-  grid-template-columns: 200px 200px;
-}
-
 .grid-template-columns-3 {
-  grid-template-columns: 1fr 2fr 1fr;
+  grid-template-columns: 1fr 1fr;
 }
 
 
-.subgrid>div {
-  background: rgba(0, 0, 0, .3);
+
+.grid-template-rows {
+  grid-template-rows: 40px 50px 50px;
 }
 
 /* Estilos Gerais */
@@ -45,8 +42,4 @@ body {
 
 body>div {
   padding: 40px 0;
-}
-
-body>div:nth-of-type(even) {
-  background: rgba(0, 0, 0, .03);
 }
