--- a/aula07_align_content/style.css
+++ b/aula07_align_content/style.css
@@ -1,7 +1,7 @@
 .grid {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(3, 50px);
+  /* grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(3, 50px); */
   height: 300px;
 }
 
