--- a/aula06_justify_content/style.css
+++ b/aula06_justify_content/style.css
@@ -4,13 +4,13 @@
 
 }
 
-.grid-template-columns {
+/* .grid-template-columns {
   grid-template-columns: 200px 200px;
-}
+} */
 
-.grid-template-columns-3 {
+/* .grid-template-columns-3 {
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
-}
+} */
 
 
 .subgrid>div {
@@ -30,16 +30,17 @@
   justify-content: center;
 }
 
-.justify-content-stretch {
+.stretch {
   grid-template-columns: auto;
   justify-content: stretch;
 }
 
-.justify-content-space-around {
+.space-around {
+  grid-template-columns: auto;
   justify-content: space-around;
 }
 
-.justify-content-space-between {
+.space-between {
   justify-content: space-between;
 }
 
